# Fractals_and_Root-Finding

./: Box_Count.py  Newton_Fractal.py  Newtons_Method.py  README.md  functions.py  main.py  pyproject.toml
